# DesktopData

./: .gitignore  AccountWindow.cpp  AccountWindow.h  CMakeLists.txt  LoginWindow.cpp  LoginWindow.h  main.cpp
GitHub/: Account.cpp  Account.h  Projects.cpp  Projects.h  Repositories.cpp  Repositories.h
